legal service styele added

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <section>
         <div>
             <div class="legal-section">
-                <div>
+                <div class="legal-width">
                     <div class="legal-section-left">
                         <article>
                             <h2>Why do we help with legalization?</h2>
@@ -101,13 +101,6 @@
                         </article>
                     </div>
                     <div class="legal-section-right">
-                        <div class="legal-right-container">
-                            <article>
-                                <img src="image/Circle Layer.svg" alt="">
-                                <h3>Enviromental Law</h3>
-                                <p>Environmental legal issues might occur since the planned business activities are designed</p>
-                            </article>
-                        </div>
 
                         <div class="legal-right-container">
                             <article>
