count and testimonial section css added

--- a/index.html
+++ b/index.html
@@ -140,22 +140,24 @@
     </section>
 
     <!--Count Section-->
-    <section>
+    <section class="count">
         <div>
             <div class="count-section">
                 <h2>Some count that matters</h2>
                 <p>Our achievement in the journey depicted in numbers</p>
                 <div class="count-content">
-                    <h2>30</h2>
-                    <p>Clients</p>
-                </div>
-                <div class="count-content">
-                    <h2>300+</h2>
-                    <p>Taken business legalities</p>
-                </div>
-                <div class="count-content">
-                    <h2>8</h2>
-                    <p>Years of Journey</p>
+                    <div class="count-item">
+                        <h2>30</h2>
+                        <p>Clients</p>
+                    </div>
+                    <div class="count-item">
+                        <h2>300+</h2>
+                        <p>Taken business legalities</p>
+                    </div>
+                    <div class="count-item">
+                        <h2>8</h2>
+                        <p>Years of Journey</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -167,33 +169,35 @@
             <div class="testimonial-section">
                 <div>
                     <h2>Clients Testimonial</h2>
-                    <div class="testimonial-box">
-                        <div class="testimonial-content">
-                            <h3>Incredible Experience</h3>
-                            <p>We had an incredible experience working with Landify and were impressed they made such a big difference in only three weeks. Our team is so grateful for the wonderful improvements they made and their ability to get familiar with the concept so quickly.</p>
-                        </div>
-                        <div class="testimonial-profile">
-                            <div class="testimonial-image">
-                                <img src="image/Photo.svg" alt="">
+                    <div class="testimonial-content-box container">
+                        <div class="testimonial-box">
+                            <div class="testimonial-content">
+                                <h3>Incredible Experience</h3>
+                                <p>We had an incredible experience working with Landify and were impressed they made such a big difference in only three weeks. Our team is so grateful for the wonderful improvements they made and their ability to get familiar with the concept so quickly.</p>
                             </div>
-                            <div class="testimonial-information">
-                                <h3>Anya Tailor Joy</h3>
-                                <p>CEO, SF Industires</p>
+                            <div class="testimonial-profile">
+                                <div class="testimonial-image">
+                                    <img src="image/Photo.svg" alt="">
+                                </div>
+                                <div class="testimonial-information">
+                                    <h3>Anya Tailor Joy</h3>
+                                    <p>CEO, SF  Industires</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="testimonial-box">
-                        <div class="testimonial-content">
-                            <h3>Dependable, Responsive, Professional Partner</h3>
-                            <p>Fermin Apps has collaborated with Landify team for several projects such as Photo Sharing Apps and Custom Social Networking Apps. The experience has been pleasant, professional and exceeding our expectations. </p>
-                        </div>
-                        <div class="testimonial-profile">
-                            <div class="testimonial-image">
-                                <img src="image/Photo.svg" alt="">
+                        <div class="testimonial-box">
+                            <div class="testimonial-content">
+                                <h3>Dependable, Responsive, Professional Partner</h3>
+                                <p>Fermin Apps has collaborated with Landify team for several projects such as Photo Sharing Apps and Custom Social Networking Apps. The experience has been pleasant, professional and exceeding our expectations. </p>
                             </div>
-                            <div class="testimonial-information">
-                                <h3>Anya Tailor Joy</h3>
-                                <p>CEO, SF Industires</p>
+                            <div class="testimonial-profile">
+                                <div class="testimonial-image">
+                                    <img src="image/Photo.svg" alt="">
+                                </div>
+                                <div class="testimonial-information">
+                                    <h3>Anya Tailor Joy</h3>
+                                    <p>CEO, SF Industires</p>
+                                </div>
                             </div>
                         </div>
                     </div>
