footer and CTA section style

--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@
     <!--CTA Section-->
     <section>
         <div>
-            <div class="cta-section">
-                <div>
+            <div class="cta">
+                <div  class="cta-section">
                     <div class="cta-content">
                         <h2>Complex Questions?</h2>
                         <p>Request for a personalized budget for your legal problem. We will send you a coupe options in 24 hours. You can have free consult , if a our first customer</p>
                         <a href="#">
-                            <button><img src="image/Stroke 1.svg" alt="">Call now</button>
+                            <button><i class="fa-solid fa-phone"></i>Call now</button>
                         </a>
                     </div>
                     <div class="cta-image">
@@ -229,41 +229,41 @@
     <!--footer section-->
     <section>
         <div>
-            <div class="footer-section">
-                <div>
+            <div class="footer">
+                <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="image/Logo1.jpg" alt="">
+                        <img src="image/Logo.svg" alt="">
                     </div>
                     <div class="footer-nav">
                         <div>
                             <div class="footer-nav-menu">
                                 <h3>Product</h3>
                                 <ul>
-                                    <li>Overview</li>
-                                    <li>Features</li>
-                                    <li>Tutorials</li>
-                                    <li>Pricing</li>
-                                    <li>Releases</li>
+                                    <li><a href="#">Overview </a></li>
+                                    <li><a href="#">Features</a></li>
+                                    <li><a href="#">Tutorials</a></li>
+                                    <li><a href="#">Pricing</a></li>
+                                    <li><a href="#">Releases</a></li>
                                 </ul>
                             </div>
                             <div class="footer-nav-menu">
                                 <h3>Company</h3>
                                 <ul>
-                                    <li>About</li>
-                                    <li>Press</li>
-                                    <li>Careers</li>
-                                    <li>Contact</li>
-                                    <li>Partners</li>
+                                    <li><a href="#">About</a></li>
+                                    <li><a href="#">Press</a></li>
+                                    <li><a href="#">Careers</a></li>
+                                    <li><a href="#">Contact</a></li>
+                                    <li><a href="#">Partners</a></li>
                                 </ul>
                             </div>
                             <div class="footer-nav-menu">
                                 <h3>Support</h3>
                                 <ul>
-                                    <li>Help Center</li>
-                                    <li>Terms of service</li>
-                                    <li>Legal</li>
-                                    <li>Privacy Policy</li>
-                                    <li>Status</li>
+                                    <li><a href="#">Help Center</a></li>
+                                    <li><a href="#">Terms of service</a></li>
+                                    <li><a href="#">Legal</a></li>
+                                    <li><a href="#">Privacy Policy</a></li>
+                                    <li><a href="#">Status</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -276,16 +276,16 @@
     <!--sub footer Section-->
     <section>
         <div>
-            <div class="sub-foot-section">
-                <div>
+            <div class="sub-foot">
+                <div class="sub-foot-section">
                     <div class="sub-foot-copyrights">
                         <h3>© 2021 Lawliet. All rights reserved</h3>
                     </div>
                     <div class="sub-foot-icons">
-                        <a href="#"><i></i></a>
-                        <a href="#"><i></i></a>
-                        <a href="#"><i></i></a>
-                        <a href="#"><i></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-dribbble"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
                     </div>
                 </div>
             </div>
